gcc/testsuite/gm2/pim/fail/testindrx.mod
MODULE testindrx ;  (*!m2iso+gm2*)

VAR
   x: ARRAY [1..5] OF INTEGER ;
   ch: CHAR ;
BEGIN
   ch := x[1]
END testindrx.
